--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
-    "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
+    "victory-native": "^35.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
