--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
+    "realm": "^10.1.2",
     "victory-native": "^35.3.1"
   },
   "devDependencies": {
