--- a/ios/storagefit/Info.plist
+++ b/ios/storagefit/Info.plist
@@ -71,6 +71,10 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Nunito-Regular.ttf</string>
+		<string>Roboto-Regular.ttf</string>
+		<string>Nunito.ttf</string>
+		<string>Roboto.ttf</string>
 	</array>
 </dict>
 </plist>
